tests/ui/mismatch_types_in_break.ina
// COMPILE_FAIL

fn main() {
    loop {
        break 20;
        break 20.;
    };
}
